--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 Flask==2.2.5
 flask_sqlalchemy==3.0.5
+Flask_CKEditor==0.4.6
+Flask_Login==0.6.2
+Flask_WTF==1.1.1
+Bootstrap_Flask==2.2.0
+SQLAlchemy==2.0.19
+Werkzeug==2.2.3
+WTForms==3.0.1
